--- a/index.html
+++ b/index.html
@@ -22,18 +22,6 @@
 
     <!-- About -->
     <section class="about" id="about">
-      <div class="box">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
         <div class="heading">
             <h2>Spiting My Heart Out👉👈</h2>
         </div>
@@ -62,15 +50,15 @@
 
     <div class="CC" id="cards">
       <div class="heading">
-        <h2 class="perks">Text Here</h2>
+        <h3 class="perks">Perks of Dating Me</h3>
       </div>
         <div class="cardContainer">
             <div class="card">
               <div class="face face1">
                 <div class="cardContent">
                   <span class="stars"></span>
-                  <h2 class="java">Java</h2>
-                  <p class="java">Java is a class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</p>
+                  <h2 class="java">Benefit No.1</h2>
+                  <p class="java">Unconditionally love & Support, I know how to treat a girl right & I know how to respect any human beign, You will always be safe with me💜.</p>
                 </div>
               </div>
               <div class="face face2">
@@ -81,8 +69,8 @@
               <div class="face face1">
                 <div class="cardContent">
                   <span class="stars"></span>
-                  <h2 class="python">Python</h2>
-                  <p class="python">Python is an interpreted, high-level and general-purpose programming language.</p>
+                  <h2 class="python">Benefit No.2</h2>
+                  <p class="python">I have a good sense of humor and can always make you laugh, will always try my best to keep you away from stress, I will be your happy peaceful place💜.</p>
                 </div>
               </div>
               <div class="face face2">
@@ -93,8 +81,8 @@
               <div class="face face1">
                 <div class="cardContent">
                   <span class="stars"></span>
-                  <h2 class="cSharp">C#</h2>
-                  <p class="cSharp">C# is a general-purpose, multi-paradigm programming language encompassing static typing, strong typing, lexically scoped and component-oriented programming disciplines.</p>
+                  <h2 class="cSharp">Benefit No.3</h2>
+                  <p class="cSharp">I am a good communicator and open to discussing any issues that may arise in the relationship. I believe in communicating and sorting out things rather than GIVING UP💜.</p>
                 </div>
               </div>
               <div class="face face2">
@@ -105,8 +93,8 @@
               <div class="face face1">
                 <div class="cardContent">
                   <span class="stars"></span>
-                  <h2 class="python">Python</h2>
-                  <p class="python">Python is an interpreted, high-level and general-purpose programming language.</p>
+                  <h2 class="python">Benefit No.4</h2>
+                  <p class="python">I am pretty honest, loyal and trustworthy. I am always willing to put in effort to make the relationship work. I will always love you in every possible way and keep you happy💜.</p>
                 </div>
               </div>
               <div class="face face2">
